# Tremor

./: .gitignore  CMakeLists.txt  README.md  RenderBackend.h  RenderBackendBase.h  Tremor.sln  Tremor.vcxproj  Tremor.vcxproj.filters  atomics.h  build.bat  build.sh  declarer.py  dmc_physics.cpp  dmc_physics.h  dmc_survivors.h  encode-to-cpp.py  flecs_interpreter.cpp  flecs_interpreter.h  gfx.h  gfx_impl.inl  gfx_resource_handles.h  gfx_resource_types.h  gltf_importer.cpp  gltf_importer.h  handle.h  jolt_physics_adapter.cpp  jolt_physics_adapter.h  jolt_physics_world.cpp  jolt_physics_world.h  logger.h  main.cpp  main.cpp.backup  main.h  mem.h  oldmain.cpp  physics_interop.cpp  physics_interop.h  q_stdinc.h  quan.h  render_interop.cpp  (+36 more)
Source/: README.md
Source/Foundation/TremorTrace/: tremor_profiler.cpp  tremor_profiler.h
Source/Runtime/TremorPhysics/: physics_backend.cpp  physics_backend.h  physics_backend_adapter.cpp  physics_backend_adapter.h  physics_core.cpp  physics_core.h  physx_physics_world.cpp  physx_physics_world.h
Source/Runtime/TremorRHI/: vk_resource_wrappers.h  vk_rhi.h
Source/Runtime/TremorRenderCore/: gfx_resource_handles.h  gfx_resource_types.h
Source/Runtime/TremorRenderer/: sdf_text_renderer.cpp  sdf_text_renderer.h  sequencer_ui.cpp  sequencer_ui.h  taffy_integration.cpp  taffy_integration.h  taffy_mesh.cpp  taffy_mesh.h  ui_renderer.cpp  ui_renderer.h  vk_backend_controls.cpp  vk_backend_controls.h  vk_editor_bridge.h  vk_overlay_bridge.cpp  vk_overlay_bridge.h  vk_renderer_support.h  vk_ui_bridge.cpp  vk_ui_bridge.h
Tremor/x64/Debug/: Tremor.exe.recipe  Tremor.ilk  vc143.idb
Tremor/x64/Debug/Tremor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tremor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tremor/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
Tremor/x64/Release/: Tremor.exe.recipe  Tremor.iobj  Tremor.ipdb
Tremor/x64/Release/Tremor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tremor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tremor/x64/Release/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
assets/: cube.taf  gameplay.taf  proper_triangle.taf  quad_test.taf  simple_test.taf  sphere.taf  taffy_loader.cpp  tri.taf  triangle_test.taf  universal_test.taf
assets/audio/: adsr_demo.taf  distortion_beeper.taf  distortion_bitcrush.taf  distortion_foldback.taf  distortion_hardclip.taf  distortion_overdrive.taf  distortion_softclip.taf  filter_bandpass.taf  filter_highpass.taf  filter_lowpass.taf  mixer_demo.taf  noise_wave.taf  saw_wave.taf  sine_220hz.taf  sine_440hz.taf  sine_wave.taf  square_wave.taf  triangle_wave.taf
assets/overlays/: tri_hot_pink.tafo
assets/scripts/: gameplay_embedded.tafscript  gameplay_loose.tafscript
assets/shaders/: basic.frag  clussy.mesh  clussy.mesh.spv  clussy.task.spv  cluster.frag  cluster.mesh  cluster.mesh.spv  debug.mesh.spv  debug.task.spv  diag.frag  diag.frag.spv  gizmo.vert  minimal.mesh  sdf_text.frag  sdf_text.frag.spv  sdf_text.mesh  sdf_text.task  sdf_text.vert.spv  ui.frag  ui.frag.spv
audio/: taffy_audio_processor.cpp  taffy_audio_processor.h  taffy_polyphonic_processor.cpp  taffy_polyphonic_processor.h
cmake/: TremorModules.cmake
docs/: engine-module-refactor-roadmap.md  flecs-interpreter-roadmap.md  taffyscript-mini-spec.md  vk-surface-rationalization.md
editor/: README.md  editable_model.cpp  editor_tools.cpp  editor_viewport.cpp  file_dialog.cpp  file_dialog.h  gizmo_renderer.cpp  gizmo_renderer.h  grid_renderer.cpp  grid_renderer.h  model_editor.cpp  model_editor.h  model_editor_integration.h  model_editor_integration_EXAMPLE.cpp  model_editor_integration_impl.cpp  model_editor_main_integration.cpp  model_editor_ui.cpp  model_editor_ui.h  vk_editor_bridge.cpp
renderer/: sdf_text_renderer.cpp  sdf_text_renderer.h  sequencer_ui.cpp  sequencer_ui.h  taffy_asset.h  taffy_integration.cpp  taffy_integration.h  taffy_mesh.cpp  taffy_mesh.h  ui_renderer.cpp  ui_renderer.h
shaders/: basic.vert  clussy.task  cluster.frag  cluster.frag.spv  cluster.mesh  cluster.task  cluster.task.spv  cluster_fallback.frag  cluster_fallback.vert  cluster_frag.frag  cluster_mesh.mesh  cluster_task.task  debug.frag  debug.mesh  debug.task  diag.frag  diag.mesh  diag.mesh.spv  diag.task  gizmo.frag  gizmo.vert  gizmo.vert.spv  minimal.frag  minimal.mesh.spv  minimal.task  minimal.task.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  sdf_text.frag  sdf_text.vert  ui.vert  ui.vert.spv
taffy/: taffy.h  taffy.h.backup  tools.cpp  tools.h
test_overlays/: blue_vertex.tafo  emissive_glow.tafo  hot_pink_vertex.tafo  metallic_material.tafo  wireframe_mode.tafo
